--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,17 @@
-[build]
+[
+build
+]
   command = "npm run build"
   publish = "build"
 
-[[redirects]]
+[
+build.environment
+]
+  NODE_VERSION = "16"
+
+[[
+redirects
+]]
   from = "/*"
   to = "/index.html"
   status = 200
