--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,11 @@
-[
-build
-]
+[build]
   command = "npm run build"
   publish = "build"
 
-[
-build.environment
-]
+[build.environment]
   NODE_VERSION = "16"
 
-[[
-redirects
-]]
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
