--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "rit-first-responder-benefits",
   "version": "1.0.0",
   "private": true,
-  "engines": {
-    "node": "16.x"
-  },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "lucide-react": "^0.263.1",
-    "tailwindcss": "^2.2.19",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5"
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
